@@ -14,7 +14,6 @@ package org.openhab.binding.fmiweather.internal.client;
 
 import java.math.BigDecimal;
 import java.util.AbstractMap;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -37,6 +36,6 @@ public class LatLon implements QueryParameter {
 
     @Override
     public List<Map.Entry<String, String>> toRequestParameters() {
-        return Collections.singletonList(new AbstractMap.SimpleImmutableEntry<>("latlon", latlon));
+        return List.of(new AbstractMap.SimpleImmutableEntry<>("latlon", latlon));
     }
 }
